# tmdl-parser

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: main.py
tests/: test_export.py
tmdlparser/: __init__.py  data_model.py  parse_tmdl.py
